# grouper

./: .gitignore  NOTES.md  NOTICES.txt  README.md  STATUS.md  pyproject.toml
.agents/context/: MAP.md  NOTES.md  STATUS.md  TESTS.md  qt-pitfalls.md  root-status-notes-policy.md
.agents/plans/: handoff-2026-04-21-dialog-contrast-status.md  handoff-2026-04-23-black-dialog-border-contrast.md  plan-2026-04-20-about-page-polish.md  plan-2026-04-21-black-theme-add-group-dialog-contrast.md  plan-2026-04-21-unit-test-revamp.md  plan-2026-04-23-test-isolation-practical-route.md  plan-2026-04-24-summary-zero-bar-theme-colors.md  plan-activity-rename-persistence-fix.md  plan-fix-activity-rename-persistence.md  refactor-grouper-desktop-maintainability.md  refactor-grouper-server-package.md  rename-cli-installer-packages.md  server-refactor-review-fixes.md  standardize-frameless-dialogs.md
.agents/reviews/: fix-dialogs-vs-latest.md  review-activity-rename-persistence.md  review-test-isolation.md  server-refactor-relative-to-b-111-1.md  temp-diff.txt
cli/: __init__.py  __main__.py  main.py  output.py
cli/commands/: activity.py  board.py  dashboard.py  event.py  project.py  session.py  task.py
desktop/: __main__.py  app.py  main.py  models.py  operations.py  version_check.py  web_server.py
desktop/database/: __init__.py  boards.py  calendars.py  connection.py  projects.py  sessions.py
desktop/database/migrations/: __init__.py
desktop/styles/: __init__.py  _base.qss
desktop/ui/: __init__.py
desktop/ui/calendar/: agenda_view.py  calendar_view.py  event_dialog.py  timeline_view.py
desktop/ui/shared/: animated_card.py  animated_stack.py  base_card.py  base_dialog.py  icons.py  link_chips.py  splash.py  title_bar.py  view_models.py  widgets.py
desktop/ui/tasks/: dialogs.py  task_board.py  task_list.py  task_panel.py
desktop/ui/time/: activity_card.py  activity_config.py  activity_week.py  session_card.py  time_grid.py  time_tracker.py
desktop/ui/views/: about.py  dashboard.py  history.py  settings.py  sidebar.py  summary.py  sync_view.py
grouper/: __init__.py  __main__.py  _urls.py  _win_startup.py  app.py  config.py  formatting.py  main.py  web_server.py
grouper/database/: activities.py  events.py  prerequisites.py  settings.py  tags.py  task_links.py  tasks.py
grouper/styles/: __init__.py  _base.qss  colors.py
grouper/ui/: about.py  activity_card.py  activity_config.py  activity_week.py  agenda_view.py  animated_card.py  animated_stack.py  calendar_view.py  dashboard.py  dialogs.py  event_dialog.py  history.py  icons.py  link_chips.py  mime_types.py  session_card.py  settings.py  sidebar.py  splash.py  summary.py  sync_view.py  task_board.py  task_list.py  task_panel.py  time_grid.py  time_tracker.py  timeline_view.py  title_bar.py  view_models.py  widget_pool.py  widgets.py
grouper_cli/: __init__.py  __main__.py  main.py
grouper_cli/commands/: activity.py  board.py  dashboard.py  event.py  project.py  session.py  task.py
grouper_core/: __init__.py  _version.py  colors.py  config.py  formatting.py  models.py  operations.py
grouper_core/database/: __init__.py  activities.py  boards.py  calendars.py  connection.py  events.py  prerequisites.py  projects.py  sessions.py  settings.py  tags.py  task_links.py  tasks.py
grouper_core/database/migrations/: __init__.py  v001_stamp_initial.py  v002_add_boards.py  v003_soft_delete_activities.py  (+20 more)
grouper_install/: elevation.py  path_env.py  registry.py  setup.py
grouper_server/: __init__.py  __main__.py  runner.py
grouper_server/sync/: __init__.py  __main__.py  bootstrap.py  changelog.py  client.py  device.py  protocol.py  runtime.py  server.py
grouper_server/tui/: __init__.py  app.py
grouper_server/web/: __init__.py  css.py  routes.py
grouper_sync/: __main__.py  discovery.py  schema.py  sync_ops.py
installer/: dist_meta.py  manifest.py  setup.py
scripts/: assemble_release.bat  build_grouper.bat  build_grouper_cli.bat  build_grouper_server.bat  build_release.bat  build_release_final.bat  build_setup.bat
server/: __init__.py  __main__.py
server/cli/: __init__.py  main.py
server/runtime/: __init__.py  runner.py
server/web/: app.py  routes.py
tests/: conftest.py
tests/cli/: conftest.py  test_e2e.py  test_output.py  test_parser.py
tests/e2e/: conftest.py  helpers.py  test_app.py
tests/unit/: test_dist_meta.py  test_elevation.py  test_install_copy.py  test_install_setup.py  test_manifest.py  test_package_boundaries.py  test_path_env.py  test_registry.py  test_test_isolation.py  test_uninstall_helpers.py
tests/widget/: conftest.py  test_activity_config.py  test_activity_week.py  test_agenda_layout.py  test_animated_stack.py  test_dashboard_layout.py  test_dialogs.py  test_icons.py  test_main_window.py  test_setup_dialog.py  test_sidebar.py  test_summary_stats.py  test_task_board_drag.py  test_taskbox_elide.py  test_theme_load.py  test_theme_validation.py  test_title_bar_unit.py  test_transparency.py
(+21 files in other folders)
