[project]
name = "grouper"
version = "1.1.0.24"
description = "Grouper — a unified productivity hub for time tracking and task management"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
sync = [
    "zeroconf>=0.131",
]
web = [
    "flask>=3.0",
]
server = [
    "flask>=3.0",
    "zeroconf>=0.131",
]
test = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests taking >5 seconds",
    "widget: tests requiring a QApplication but not the full app",
]
addopts = "-v --tb=short --strict-markers"

[tool.setuptools.packages.find]
include = ["desktop*", "grouper_core*", "cli*", "server*", "grouper_sync*"]

[project.gui-scripts]
grouper = "desktop.main:main"

[project.scripts]
grouper-cli = "cli.main:main"
grouper-server = "server.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["desktop", "grouper_core", "cli", "server", "grouper_sync", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF", "PT"]
ignore = [
    "E501",     # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"**/__init__.py" = ["F401"]  # re-exports
# Re-export shim modules: intentional star-imports and forwarded names
"desktop/config.py" = ["F401", "F403"]
"desktop/formatting.py" = ["F401", "F403"]
"desktop/models.py" = ["F401", "F403"]
"desktop/operations.py" = ["F401", "F403"]
"desktop/styles/colors.py" = ["F401", "F403"]
"desktop/database/activities.py" = ["F403"]
"desktop/database/boards.py" = ["F403"]
"desktop/database/calendars.py" = ["F403"]
"desktop/database/connection.py" = ["F401"]
"desktop/database/events.py" = ["F403"]
"desktop/database/prerequisites.py" = ["F403"]
"desktop/database/projects.py" = ["F403"]
"desktop/database/sessions.py" = ["F403"]
"desktop/database/settings.py" = ["F403"]
"desktop/database/tags.py" = ["F403"]
"desktop/database/task_links.py" = ["F403"]
"desktop/database/tasks.py" = ["F403"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.ty.environment]
python-version = "3.11"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
